--- a/src/components/app.component.html
+++ b/src/components/app.component.html
@@ -1,21 +1,17 @@
 <form [formGroup]="formGroup">
-  <div>
-    <label for="input1">Option 1</label>
-    <input
-      id="input1"
-      type="radio"
-      formControlName="inputOption"
-      value="option1"
-    />
-  </div>
-  <div>
-    <label for="input2">Option 2</label>
-    <input
-      id="input2"
-      type="radio"
-      formControlName="inputOption"
-      value="option2"
-    />
-  </div>
+  <app-radio
+    [parentGroup]="formGroup"
+    [controlName]="'inputOption'"
+    [value]="'1'"
+    [text]="'Option 1'"
+    [id]="'option1'"
+  ></app-radio>
+  <app-radio
+    [parentGroup]="formGroup"
+    [controlName]="'inputOption'"
+    [value]="'2'"
+    [text]="'Option 2'"
+    [id]="'option2'"
+  ></app-radio>
   <button type="button" (click)="submitHandler()">Submit</button>
 </form>
